css/style.css
:root {
    --white-color: #FFF;
    --black-color: #000;
    --text-color: #333;
    --links-color: #EA1B78;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Raleway;
}

a {
    color: var(--links-color);
}

body {
    background-color: var(--white-color);
    color: var(--text-color);
}

img {
    display: block;
    max-width: 100%;
    height: auto;
}


.container {
    width: 75%;
    margin: 64px auto;
    /* border: 2px solid red; */
}

.main-header-wrapper {
    /* border: 2px solid green; */
    padding-bottom: 2px;
    overflow-x: hidden;
}
.main-header {
    background-color: var(--black-color);
    color: var(--white-color);
    display: flex;
    justify-content: space-between;
    flex-direction: row-reverse;
    position: relative;
    width: 75%;
    margin: auto;
    /* border: 2px solid red; */
    /* overflow: hidden; */
    /* border-bottom: 2px solid var(--white-color); */
}

.main-header::after {
    content: '';
    position: absolute;
    left: -1px;
    right: -1px;
    /* width: 100%; */
    bottom: -2px;
    height: 48px;
    background-color: white;
    -webkit-mask: url('/icons/tear-horizontal.svg');
    -mask: url('/icons/tear-horizontal.svg');
    z-index: 10;
    /* border: 2px solid red; */

}


#img-div {
    position: relative;
    /* border: 2px solid blue; */
}

#image {
    /* border: 2px solid red; */
    margin: 0 auto;
    max-width: 100%;
    height: auto;

}

#img-caption {
    text-align: center;
    position: absolute;
    left: 50%;
    width: 100%;
    bottom: -16px;
    transform: translateX(-50%);
    color: var(--black-color);
    font-style: italic;
    z-index: 20;
    font-size: 14px;
    font-weight: 500;
}

.main-header div {
    /* border: 2px solid red; */
    align-self: center;
    /* white-space: nowrap; */
    margin-left: 24px;
    width: 45%;
}

.main-header div p {
    line-height: 24px;
}

#title {
    text-transform: capitalize;
    font-size: 40px;
    line-height: 46px;
    margin-bottom: 8px;
    /* border: 2px solid red; */
}

.header-title-mobile {
    text-align: center;
    margin-top: 12px;
    display: none;
}

.header-title-mobile h1 {
    font-size: 32px;
    margin-bottom: 12px;
}


.history {
    /* border: 2px solid red; */
    margin-bottom: 32px;
}

.history h2 {
    /* border: 2px solid red; */
    font-size: 28px;
    line-height: 38px;
    font-weight: 600;
    text-align: center;
    margin-bottom: 8px;
}

.history p {
    /* border: 2px solid red; */
    font-size: 18px;
    line-height: 28px;
}

.grid {
    display: grid;
    /* grid-template-columns: repeat(3, 1fr); */
}

.grid-item {
    /* border: 2px solid red; */
    margin-bottom: 32px;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.1), 0 0 24px rgba(0, 0, 0, 0.08);
    padding: 12px 18px;
}

.grid-item .header {
    display: flex;
    align-items: flex-end;
    /* border: 2px solid red; */
    margin-bottom: 12px;
}

.header img , .header svg {
    width: 64px;
    height: 64px;
}

.header h3 {
    font-size: 24px;
    line-height: 32px;
    font-weight: 600;
    margin-left: 12px;
}

.grid-item p {
    font-size: 16px;
    line-height: 24px;

}


.citation {
    padding: 8px;
    font-weight: 600;
    line-height: 24px;
}

.citation figcaption {
    margin-top: 12px;
}

.another-source {
    background-color: var(--black-color);
    color: var(--white-color);
    width: 75%;
    margin: 0 auto;
    padding: 28px;
    text-align: center;
    line-height: 24px;

}

/* =========== Footer ================ */
.footer-container {
    font-size: 15px;
    text-align: center;
    line-height: 22px;
    
}

.footer-container svg {
    vertical-align: middle;
    fill: var(--links-color);
    width: 20px;
    height: 20px;
}

@media screen and (max-width: 768px) {
    
    .container{
        width: 95%;
    }

    .main-header {
        width: 100%;
    }

    .main-header div {
        display: none;
    }

    #img-div {
        width: 100%;
        /* border: 2px solid blue; */
    }

    #img-caption {
        opacity: 0;
    }

    .history {
        padding: 12px;
    }

    .header-title-mobile {
        display: block;
        border-bottom: 1px solid rgba(17, 17, 17, 0.08);
        padding-bottom: 12px;
    }

    .another-source {
        width: 95%;
    }
}

@media screen and (min-width: 768px) and (max-width: 968px) {
    
    .container, .main-header {
        width: 85%;

    }
}

